--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.container {
+  @apply max-w-7xl mx-auto w-full px-4;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+/* Input */
+select {
+  @apply w-full px-4 py-2 rounded-md border border-black/20 bg-transparent;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+input[type="date"] {
+  @apply w-full px-4 py-2 rounded-md border border-black/20 bg-transparent;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.search-btn {
+  @apply bg-gray-700 px-8 py-3 rounded-md block mx-auto text-white font-bold -translate-y-1/2 shadow-lg hover:shadow-gray-800/50 active:scale-95 transition-all;
+}
+
+.btn-primary {
+  @apply bg-gray-700 px-8 py-2 rounded-md block text-white font-bold shadow-lg hover:shadow-gray-600 active:scale-95 transition-all;
+}
+
+.btn-disabled {
+  @apply bg-gray-500 px-8 py-2 rounded-md block text-white font-bold shadow-lg cursor-default;
+}
+
+#searchParams {
+  @apply bg-white w-full h-full py-10 lg:py-12 px-6 lg:px-8 rounded-xl border border-black/10 shadow-lg lg:flex items-center [&>*]:flex-1 [&>*]:px-4 [&>div>span]:mb-3 space-y-5 lg:space-y-0;
+}
+
+#searchParams span {
+  @apply font-bold;
 }
